[tool.poetry]
name = "aiotusx"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
uvicorn = "^0.20.0"
starlette = "^0.23.1"
pytest-asyncio = "^0.20.3"


[tool.poetry.group.dev.dependencies]
darker = "<=1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
